immich/Ingress-immich.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: azure-acme-issuer
  name: immich
  namespace: immich
spec:
  ingressClassName: haproxy
  rules:
    - host: immich.anderwerse.de
      http:
        paths:
          - backend:
              service:
                name: immich-server
                port:
                  number: 2283
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - immich.anderwerse.de
      secretName: immich-tls
